some minor changes and remove title
